--- a/app/templates/orderadmin.html
+++ b/app/templates/orderadmin.html
@@ -9,6 +9,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="{% static 'admin.css' %}" />
     <title>Food</title>
   </head>
   <body>
