--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,42 +102,47 @@
         });
       });
       </script>
+      <br>
 
-      <div id="main">
-        <div class="items">
-          <div class="large-col">
-            <h2 class = "home-sections">Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
-            <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family">
+
+      <div class = "testimonials text-center">
+      <div class="container">
+            <h3>Testimonials</h3>
+            <div class="row">
+              <div class="col-md-6 col-lg-4">
+                <div class="card border-light bg-light text-center">
+                  <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
+                  <div class="card-body blockquote">
+                    <p class="card-text">Great place to eat, great food, great prices and super friendly service. We love the Coleys.</p>
+                    <footer class="blockquote-footer"><cite title="Source Title">Danny</cite></footer>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-md-6 col-lg-4">
+                <div class="card border-light bg-light text-center">
+                  <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
+                  <div class="card-body blockquote">
+                    <p class="card-text">Best frog legs I've had in a while. I will be back!</p>
+                    <footer class="blockquote-footer"><cite title="Source Title">Rodney</cite></footer>
+                  </div>
+                </div>
+              </div>
+      
+              <div class="col-md-6 col-lg-4">
+                <div class="card border-light bg-light text-center">
+                  <i class="fa fa-quote-left fa-3x card-img-top rounded-circle" aria-hidden="true"></i>
+                  <div class="card-body blockquote">
+                    <p class="card-text">Good food and freshly made on every order.</p>
+                    <footer class="blockquote-footer"><cite title="Source Title">Matt-Kat</cite></footer>
+                  </div>
+                </div>
+              </div>
+      
+            </div>
           </div>
-          <div class="large-col-last">
-            <h2 class = "home-sections">Today's Special</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar.</p>
-            
-            <p class="a-link"><a href="#" class="btn-red" title="Order"><span>Order</span></a></p>					
-          </div>
-          <div class="cl">&nbsp;</div>
+      
         </div>
-        <div class="items">
-            <div class="small-col1">
-              <h3>Danny says</h3>
-              <p>"Great place to eat, great food, great prices and super friendly service. We love the Coleys."</p>
-            </div>
-          </div>
-        <div class="items">
-            <div class="small-col2">
-              <h3>Rodney says</h3>
-              <p>"Best frog legs I've had in a while. I will be back!"</p>
-            </div>
-          </div>
-            <div class="small-col3">
-              <h3>Matt-Kat says</h3>
-              <p>"Good food and freshly made on every order."</p>
-            </div>
-          </div>
-          <div class="cl">&nbsp;</div>
-        </div>
-      </div>
     {% for event in events %}
       <p>{{event.name}}</p>
       <p>{{event.description}}</p>
