--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -40,12 +40,12 @@
 			      		</div>
 			      	</div>
 			      		<div class="form-group mb-3">
-			      			<label class="label" for="name">Username</label>
-			      			<input type="text" class="form-control" placeholder="Username" required>
+			      			<label class="label" for="username">Username</label>
+			      			<input type="text" class="form-control" placeholder="Username" name="username"required>
 			      		</div>
 		            <div class="form-group mb-3">
 		            	<label class="label" for="password">Password</label>
-		              <input type="password" class="form-control" placeholder="Password" required>
+		              <input type="password" class="form-control" placeholder="Password" name="password"required>
 		            </div>
 		            <div class="form-group">
 		            	<button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
