--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -41,20 +41,20 @@
 			      		</div>
 			      	</div>
 			      		<div class="form-group mb-3">
-			      			<label class="label" for="name">Username</label>
-			      			<input type="text" class="form-control" placeholder="Username"  required>
+			      			<label class="label" for="username">Username</label>
+			      			<input type="text" class="form-control" placeholder="Username"  name="username"required>
 			      		</div>
 						  <div class="form-group mb-3">
-							<label class="label" for="password">Email</label>
-						  <input type="text" class="form-control" placeholder="Email" required>
+							<label class="label" for="email">Email</label>
+						  <input type="text" class="form-control" placeholder="Email" name="email"required>
 						</div>
 		            <div class="form-group mb-3">
 		            	<label class="label" for="password">Password</label>
-		              <input type="password" class="form-control" placeholder="Password" required>
+		              <input type="password" class="form-control" placeholder="Password" name="password1" required>
 		            </div>
 					<div class="form-group mb-3">
 		            	<label class="label" for="password">Confirm Password</label>
-		              <input type="password" class="form-control" placeholder="Password2" required>
+		              <input type="password" class="form-control" placeholder="Password2" name="password2" required>
 		            </div>
 		            <div class="form-group">
 		            	<button type="submit" class="form-control btn btn-primary submit px-3">Create Account</button>
@@ -66,6 +66,7 @@
 		      </div>
 				</div>
 			</div>
+			</form>
 		</div>
 	</section>
 
