--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -4,8 +4,8 @@ body {
   font-size: 12px;
   line-height: 1.3;
   font-family: arial, sans-serif;
-  color: white;
-  background-color: #707070;
+  color: black;
+  background-color: black;
   min-width: 1023px;
 }
 
@@ -28,6 +28,8 @@ nav a {
 
 nav a:hover {
   background-color:#991600;
+  text-decoration: none;
+  color: white;
 }
 
 .main-content {
@@ -42,21 +44,11 @@ nav a:hover {
   margin: 0;
   font-size: 20px;
   line-height: 50px;
-}
-
-.ordersButton {
-  justify-content: center;
-}
-
-.ordersButton a {
-  text-decoration: none;
-  color: black;
-  font-size: 20px;
+  background-color: white;
 }
 
 .NOB {
-  width: 164px; 
-  height: 50px; 
   border: 3px solid black;
-  justify-content: center;
+  float: right;
+  width: 140px;
 }
