--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -104,6 +104,24 @@
       </script>
       <br>
 
+      <div id="main">
+        <div class="items">
+          <div class="large-col">
+            <h2 class = "home-sections">Who Are We?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
+            {% comment %} <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family" class ="coleys"> {% endcomment %}
+          </div>
+          <div class="large-col-last">
+            <h2 class = "home-sections">Today's Special</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar.</p>
+            
+            <p class="a-link"><a href="#" class="btn-red" title="Order"><span>Order</span></a></p>          
+          </div>
+          <div class="cl">&nbsp;</div>
+        </div>
+        <br>
+        <br>
+
 
       <div class = "testimonials text-center">
         <div class="container">
