--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -15,6 +15,7 @@ nav {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  box-shadow: 0px 10px 12px gray;
 }
 
 nav a {
@@ -37,6 +38,12 @@ nav a:hover {
   display: flex;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 .formBox{
   width: 32vw;
   padding: 10px;
@@ -51,4 +58,8 @@ nav a:hover {
   border: 3px solid black;
   float: right;
   width: 140px;
+}
+
+.tall {
+  height: 100vh;
 }
