--- a/app/templates/till.html
+++ b/app/templates/till.html
@@ -13,15 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
     <body>
-      <nav>
+      <nav class="sticky">
         <a href="{% url 'home' %}" title="Home">Home</a>
         <a href="{% url 'deleteEvent' %}">Delete Events</a>
         <a href="{% url 'orderAdmin' %}">Orders</a>
-        {% if noOrdersButton.isActive == True %}
-        <a class="NOB" href="{% url 'turnOffOrders' %}" style="background-color: red;">Not Taking Orders</a>
-        {% else %}
-        <a class="NOB" href="{% url 'turnOffOrders' %}" style="background-color: green;">Taking Orders</a>
-        {%endif%}
+        <a href="{% url 'admin' %}">Admin</a>
       </nav>
       <div class="main-content">
         {% for till in tills%}
