--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -9,6 +9,8 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
+    
+    <link rel="stylesheet" href="{% static 'food-style.css' %}"/>
     <title>Cart</title>
   </head>
   <body>
@@ -16,30 +18,35 @@
       <a href="{% url 'home' %}" title="Home">Home</a>
       <a href="{% url 'food' %}">Menu</a>
     </nav>
-    <div class="ticket-content" id="ticketDisplay">
-      {% for item in cart %}
-      <div class="ticketItem">
-        <h2 class="itemName">{{item.name}}</h2>
-        {% if item.type == "big"%}
-        <p>{{item.side1}}</p><p>{{item.side2}}</p>
-        {% endif %}
-        {% if item.type == "small"%}
-        <p>{{item.side1}}</p>
-        {% endif %}
-        <h2 class="itemPrice">${{item.cost}}</h2>
-        <button>
-          <a href="{% url 'removeFromCart' item.id %}">Remove</a>
-        </button>
+    <div class="mainpage">
+      <div class="ticket-content" id="ticketDisplay">
+        {% for item in cart %}
+        <div class="ticketItem">
+          <h2 class="itemName">{{item.name}}---${{item.cost}}</h2>
+          {% if item.type == "big"%}
+          <p>--{{item.side1}}</p><p>--{{item.side2}}</p>
+          {% endif %}
+          {% if item.type == "small"%}
+          <p>--{{item.side1}}</p>
+          {% endif %}
+          {% if item.comment != "" %}
+          <p>request: {{item.comment}}</p>
+          {% endif %}
+          <button>
+            <a href="{% url 'removeFromCart' item.id %}">Remove</a>
+          </button>
+        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-    </div>
-    <div class="storeHours">
-      <h2 id="total">Total: ${{total}}</h2>
-      {% if isActive.isActive == False and storeHours == True %}
-      <div class="placeBtn"><a href="{% url 'checkout' %}">Place Order</a></div>
-      {% else %}
-      <p>Sorry, we are not taking online orders at this time.</p>
-      {% endif %}
+      <h3 id="tax">Tax: ${{totalTax}}</h3>
+      <h1 id="total">Total: ${{total}}</h1>
+      <div class="storeHours">
+        {% if isActive.isActive == False and storeHours == True and total > 0 %}
+        <div class="placeBtn"><a href="{% url 'checkout' %}">Place Order</a></div>
+        {% else %}
+        <p>Sorry, we are not taking online orders at this time.</p>
+        {% endif %}
+      </div>
     </div>
   </body>
 </html>
