--- a/app/templates/paidTicket.html
+++ b/app/templates/paidTicket.html
@@ -9,7 +9,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{% static 'admin.css' %}" />
+    <link rel="stylesheet" href="{% static 'food-style.css' %}" />
     <title>Ticket</title>
   </head>
   <body>
@@ -17,21 +17,25 @@
       <a href="{% url 'home' %}" title="Home">Home</a>
       <a href="{% url 'food' %}">Menu</a>
     </nav>
-      <div class="ticket-content" id="ticketDisplay" style="color: white;">
-        {% for item in cart.cartitem_set.all %}
-          <h3>{{item.name}}</h3>
-          {% if item.type == "big" %}
+    <div class="mainpage">
+      <div class="ticket-content" id="ticketDisplay">
+      {% for item in cart.cartitem_set.all %}
+        <div class="ticketItem">
+          <h2 class="itemName">{{item.name}}---${{item.cost}}</h2>
+          {% if item.type == "big"%}
           <p>--{{item.side1}}</p><p>--{{item.side2}}</p>
-          {% elif item.type == "small"%}
+          {% endif %}
+          {% if item.type == "small"%}
           <p>--{{item.side1}}</p>
           {% endif %}
           {% if item.comment != "" %}
-          <p>--{{item.comment}}</p>
+          <p>request: {{item.comment}}</p>
           {% endif %}
-        {% endfor %}
-      </div>
+        </div>
+      {% endfor %}
       <div class="storeHours">
-        <h2 id="total" style="color: white;">Total: ${{total}}</h2>
+        <h3 id="tax">Tax: ${{totalTax}}</h3>
+        <h2 id="total">Total: ${{total}}</h2>
       </div>
     </div>
   </body>
