add in if for seafood item when its not friday
will return to change

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -21,21 +21,23 @@
     <div class="mainpage">
       <div class="ticket-content" id="ticketDisplay">
         {% for item in cart %}
-        <div class="ticketItem">
-          <h2 class="itemName">{{item.name}}---${{item.cost}}</h2>
-          {% if item.type == "big"%}
-          <p>--{{item.side1}}</p><p>--{{item.side2}}</p>
-          {% endif %}
-          {% if item.type == "small"%}
-          <p>--{{item.side1}}</p>
-          {% endif %}
-          {% if item.comment != "" %}
-          <p>request: {{item.comment}}</p>
-          {% endif %}
-          <button>
-            <a href="{% url 'removeFromCart' item.id %}">Remove</a>
-          </button>
-        </div>
+        {% if item.type == "seafood"%}
+          <div class="ticketItem">
+            <h2 class="itemName">{{item.name}}---${{item.cost}}</h2>
+            {% if item.type == "big"%}
+            <p>--{{item.side1}}</p><p>--{{item.side2}}</p>
+            {% endif %}
+            {% if item.type == "small"%}
+            <p>--{{item.side1}}</p>
+            {% endif %}
+            {% if item.comment != "" %}
+            <p>request: {{item.comment}}</p>
+            {% endif %}
+            <button>
+              <a href="{% url 'removeFromCart' item.id %}">Remove</a>
+            </button>
+          </div>
+        {% endif %}
         {% endfor %}
       </div>
       <h3 id="tax">Tax: ${{totalTax}}</h3>
