Added contact info

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -166,6 +166,10 @@
       <p>{{event.description}}</p>
       <p>{{event.date}}</p>
     {% endfor %}
-
   </body>
+  <footer>
+    <p>+1 666 666-6666</p>
+    <p>Facebook</p>
+    <p>Address</p>
+  </footer>
 </html>
