--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,115 +15,121 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <div id="wrapper">
-      <div class="shell">
-  
-        <div id="header">
-          <h1 id="logo"><a target="blank" href="https://www.facebook.com/thecornerstore7938/" title="" style=" margin-bottom: 50px;">CornerStore</a></h1>
+      <div id="wrapper">
+        <div class="shell">
+    
+          <div id="header">
+            <h1 id="logo"><a target="blank" href="https://www.facebook.com/thecornerstore7938/" title="" style=" margin-bottom: 50px;">CornerStore</a></h1>
+          </div>
+    
+          <nav id="navigation">
+            <ul>
+              <li><a href="{% url 'food' %}" title="Food"><span>Menu</span></a></li>
+              <li><a href="{% url 'logout' %}" title ="Login"><span>Logout</span></a> </li>
+              {% if is_admin == True%}
+              <li><a href="{% url 'admin' %}"><span>Admin</spam></a></li>
+              {% endif %}
+            </ul>
+          </nav>
+          <hr class="nav-underline">
         </div>
-  
-        <nav id="navigation">
-          <ul>
-            <li><a href="{% url 'food' %}" title="Food"><span>Menu</span></a></li>
-            <li><a href="{% url 'logout' %}" title ="Login"><span>Logout</span></a> </li>
-            {% if is_admin == True%}
-            <li><a href="{% url 'admin' %}"><span>Admin</spam></a></li>
-            {% endif %}
-          </ul>
-        </nav>
-        <hr class="nav-underline">
-      </div>
-      <!-- END Navigation -->
-      <!-- Slider -->
-  
-      <div class="container">
-        <div id="myCarousel" class="carousel slide">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li class="item1 active"></li>
-            <li class="item2"></li>
-            <li class="item3"></li>
-          </ol>
-      
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-      
-            <div class="item active">
-                <img src="{% static 'images/storefront.jpg' %}" width="200" height="250" alt="Storefront" class="center"> 
-          
-            </div>
-      
-            <div class="item">
-                <img src="{% static 'images/inside-store.jpg' %}" width="200" height="250" alt="Inside of store" class="center"> 
-              
-            </div>
-          
-            <div class="item">
-                <img src="{% static 'images/dad-pic.jpeg' %}" width="200" height="250" alt="Owner of store" class="dad-pic">
+        <!-- END Navigation -->
+        <!-- Slider -->
+    
+        <div class="container">
+          <div id="myCarousel" class="carousel slide">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li class="item1 active"></li>
+              <li class="item2"></li>
+              <li class="item3"></li>
+            </ol>
+        
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+        
+              <div class="item active">
+                  <img src="{% static 'images/storefront.jpg' %}" width="200" height="250" alt="Storefront" class="center"> 
+            
               </div>
+        
+              <div class="item">
+                  <img src="{% static 'images/inside-store.jpg' %}" width="200" height="250" alt="Inside of store" class="center"> 
+                
+              </div>
+            
+              <div class="item">
+                  <img src="{% static 'images/dad-pic.jpeg' %}" width="200" height="250" alt="Owner of store" class="dad-pic">
+                </div>
+              </div>
+          
             </div>
         
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-      
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" role="button">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" role="button">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        </div>
+        
+        <script>
+        $(document).ready(function(){
+          // Activate Carousel
+          $("#myCarousel").carousel();
+            
+          // Enable Carousel Indicators
+          $(".item1").click(function(){
+            $("#myCarousel").carousel(0);
+          });
+          $(".item2").click(function(){
+            $("#myCarousel").carousel(1);
+          });
+          $(".item3").click(function(){
+            $("#myCarousel").carousel(2);
+          });
+            
+          // Enable Carousel Controls
+          $(".left").click(function(){
+            $("#myCarousel").carousel("prev");
+          });
+          $(".right").click(function(){
+            $("#myCarousel").carousel("next");
+          });
+        });
+        </script>
+        <br>
+
+        <div id="main">
+          <div class="items" style="width: 100vw;">
+            <div class="large-col">
+              <h2 class = "home-sections">Who Are We?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
+              <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family" class ="coleys">
+            </div>
+            <div class="large-col-last">
+              <h2 class = "home-sections">Today's Lunch</h2>
+              {% for stuff in lunch%}
+                <p>{{stuff.entree1}}</p>
+                <p>{{stuff.entree2}}</p>
+                <p>{{stuff.side1}}</p>
+                <p>{{stuff.side2}}</p>
+                <p>{{stuff.side3}}</p>
+                <p>{{stuff.bread}}</p>
+                <p>{{stuff.dessert}}</p>
+              {%endfor%}
+              
+              <p class="a-link"><a href="#" class="btn-red" title="Order"><span>Order</span></a></p>          
+            </div>
+            <div class="cl">&nbsp;</div>
+          </div>
         </div>
       </div>
-      
-      <script>
-      $(document).ready(function(){
-        // Activate Carousel
-        $("#myCarousel").carousel();
-          
-        // Enable Carousel Indicators
-        $(".item1").click(function(){
-          $("#myCarousel").carousel(0);
-        });
-        $(".item2").click(function(){
-          $("#myCarousel").carousel(1);
-        });
-        $(".item3").click(function(){
-          $("#myCarousel").carousel(2);
-        });
-          
-        // Enable Carousel Controls
-        $(".left").click(function(){
-          $("#myCarousel").carousel("prev");
-        });
-        $(".right").click(function(){
-          $("#myCarousel").carousel("next");
-        });
-      });
-      </script>
-      <br>
-
-      <div id="main">
-        <div class="items">
-          <div class="large-col">
-            <h2 class = "home-sections">Who Are We?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
-            {% comment %} <img src="{% static 'images/cornerstore-staff.jpeg' %}" alt="Coley Family" class ="coleys"> {% endcomment %}
-          </div>
-          <div class="large-col-last">
-            <h2 class = "home-sections">Today's Special</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar.</p>
-            
-            <p class="a-link"><a href="#" class="btn-red" title="Order"><span>Order</span></a></p>          
-          </div>
-          <div class="cl">&nbsp;</div>
-        </div>
-        <br>
-        <br>
-
-
-      <div class = "testimonials text-center">
+      <div class = "testimonials text-center" style="width: 100vw; display: flex; justify-content: space-between;">
         <div class="container">
               <h3>Testimonials</h3>
               <div class="row">
