--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -173,9 +173,9 @@
       <p>{{event.date}}</p>
     {% endfor %}
   </body>
-  <footer>
-    <p>+1 666 666-6666</p>
-    <p>Facebook</p>
-    <p>Address</p>
+  <footer id = "navigation">
+    <p>Number: (662) 568-7848</p>
+    <a class="facebook" target="blank" href="https://www.facebook.com/thecornerstore7938/">Facebook</a>
+    <p>Address: 7938 RedlandSarepta Rd 38850 Houlka,Ms</p>
   </footer>
 </html>
