--- a/app/static/style.css
+++ b/app/static/style.css
@@ -193,7 +193,8 @@ textarea {
   margin: 1em;
   padding: .5em;
   margin-bottom: 0;
-  border-image: url("images/");
+  border: 30px solid transparent;
+  border-image: url("images/border-image.webp") 30% round;
 }
 .large-col .a-link {
   padding-top: 7px;
